# SCOPE

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  scope_infer.py
config/: 16gpu.yaml  1gpu.yaml  1gpu1.yaml  1gpu_bf16.yaml  1gpu_fp16.yaml  2gpu.yaml  2gpu_bf16.yaml  4gpu.yaml  4gpu1.yaml  7gpu.yaml  8gpu.yaml  8gpu1.yaml  8gpu_bf16.yaml  8gpu_fp16.yaml  8gpu_fp8.yaml
configs/train/: scope.json
scope/dataset/: DynamicReplica.py  IRS.py  ParallelDomain4D.py  US4K.py  bonn.py  ddad.py  diode.py  gtaim.py  gtasfm.py  hypersim.py  kitti.py  kubric.py  lightwheel.py  matrixcity.py  midair.py  mvssynth.py  nyu.py  pointodyssey.py  sam.py  scannet.py  sintel.py  spring.py  spring1.py  sunrgbd.py  tartanair.py  transf.py  transform.py  vkitti2.py
scope/dataset/splits/: README.md
scope/model/: __init__.py  moge.py  scope.py
scope/model/dinov2/models/: vision_transformer.py
scope/model/motion_module/: attention.py  motion_module.py
scope/scripts/: cli.py  infer_video.py  train.py
scope/test/: metrics.py
scope/train/: dataloader.py  losses.py  utils.py
scope/utils/: alignment.py  checkpoints.py  download.py  geometry_numpy.py  geometry_torch.py  io.py  panorama.py  pipeline.py
